; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_580.c_encode.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_580.c_encode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8 (i8)* @encode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal signext i8 @encode(i8 zeroext %0) #0 {
  %2 = alloca i8, align 1
  %3 = alloca i8, align 1
  store i8 %0, i8* %3, align 1
  %4 = load i8, i8* %3, align 1
  %5 = zext i8 %4 to i32
  %6 = icmp slt i32 %5, 26
  br i1 %6, label %7, label %12

7:                                                ; preds = %1
  %8 = load i8, i8* %3, align 1
  %9 = zext i8 %8 to i32
  %10 = add nsw i32 65, %9
  %11 = trunc i32 %10 to i8
  store i8 %11, i8* %2, align 1
  br label %38

12:                                               ; preds = %1
  %13 = load i8, i8* %3, align 1
  %14 = zext i8 %13 to i32
  %15 = icmp slt i32 %14, 52
  br i1 %15, label %16, label %22

16:                                               ; preds = %12
  %17 = load i8, i8* %3, align 1
  %18 = zext i8 %17 to i32
  %19 = sub nsw i32 %18, 26
  %20 = add nsw i32 97, %19
  %21 = trunc i32 %20 to i8
  store i8 %21, i8* %2, align 1
  br label %38

22:                                               ; preds = %12
  %23 = load i8, i8* %3, align 1
  %24 = zext i8 %23 to i32
  %25 = icmp slt i32 %24, 62
  br i1 %25, label %26, label %32

26:                                               ; preds = %22
  %27 = load i8, i8* %3, align 1
  %28 = zext i8 %27 to i32
  %29 = sub nsw i32 %28, 52
  %30 = add nsw i32 48, %29
  %31 = trunc i32 %30 to i8
  store i8 %31, i8* %2, align 1
  br label %38

32:                                               ; preds = %22
  %33 = load i8, i8* %3, align 1
  %34 = zext i8 %33 to i32
  %35 = icmp eq i32 %34, 62
  br i1 %35, label %36, label %37

36:                                               ; preds = %32
  store i8 43, i8* %2, align 1
  br label %38

37:                                               ; preds = %32
  store i8 47, i8* %2, align 1
  br label %38

38:                                               ; preds = %37, %36, %26, %16, %7
  %39 = load i8, i8* %2, align 1
  ret i8 %39
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
